crates/ink/tests/ui/storage_item/fail/argument_derive_invalid_type.stderr
error: expected a bool literal for `derive` ink! storage item configuration argument
 --> tests/ui/storage_item/fail/argument_derive_invalid_type.rs:1:21
  |
1 | #[ink::storage_item(derive = "false")]
  |                     ^^^^^^^^^^^^^^^^
